# personio-rs

./: .env.sample  Cargo.toml  README.md  openapi-generator
.github/workflows/: rust.yml
personio-auth/: Cargo.toml  README.md
personio-auth/.openapi-generator/: FILES
personio-auth/docs/: AuthApi.md  AuthPostRequest.md  AuthenticationTokenResponse.md  AuthenticationTokenResponseAllOfData.md
personio-auth/src/apis/: auth_api.rs  (+2 more)
personio-personnel/: Cargo.toml  README.md
personio-personnel/.openapi-generator/: FILES
personio-personnel/docs/: Absence.md  AbsenceEntitlement.md  AbsenceEntitlementValueInner.md  AbsenceEntitlementValueInnerAttributes.md  AbsenceOverviewAttribute.md  AbsencePeriodAttribute.md  AbsencePeriodBreakdown.md  AbsencePeriodResponse.md  AbsencePeriodsResponse.md  AbsencePeriodsResponseAllOfData.md  AbsenceTimeOffType.md  AbsenceTimeOffTypeAttributes.md  AbsenceType.md  AbsencesApi.md  Attendance.md  Attendance404ErrorResponse.md  Attendance404ErrorResponseError.md  AttendanceCreateRequest.md  AttendanceCreateRequestAttendancesInner.md  AttendanceCreateUpdate400ErrorResponse.md  AttendanceCreateUpdate400ErrorResponseError.md  AttendanceCreateUpdate400ErrorResponseErrorDetailedMessageInner.md  AttendanceDelete400ErrorResponse.md  AttendanceDelete400ErrorResponseError.md  AttendancePeriodsResponse.md  AttendancePeriodsResponseAllOfData.md  AttendanceProject.md  AttendanceProjectAttributes.md  AttendanceUpdateRequest.md  AttendancesApi.md  CompanyAbsencePeriodsGet404Response.md  (+168 more)
src/: auth.rs  lib.rs  personnel.rs
templates/: model.mustache
(+207 files in other folders)
